
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_10__ TYPE_1__ ;


typedef scalar_t__ uint8 ;
struct TYPE_10__ {int size; int data; scalar_t__ end; int p; } ;
typedef TYPE_1__* STREAM ;
typedef int BOOL ;


 int BER_TAG_INTEGER ;
 int BER_TAG_OCTET_STRING ;
 int BER_TAG_RESULT ;
 int False ;
 int MCS_CONNECT_RESPONSE ;
 int ber_parse_header (TYPE_1__*,int ,int*) ;
 int error (char*,int) ;
 int in_uint8 (TYPE_1__*,scalar_t__) ;
 int in_uint8a (TYPE_1__*,int ,int) ;
 int in_uint8s (TYPE_1__*,int) ;
 TYPE_1__* iso_recv () ;
 int mcs_parse_domain_params (TYPE_1__*) ;
 int s_check_end (TYPE_1__*) ;

__attribute__((used)) static BOOL
mcs_recv_connect_response(STREAM mcs_data)
{
 uint8 result;
 int length;
 STREAM s;

 s = iso_recv();
 if (s == ((void*)0))
  return False;

 ber_parse_header(s, MCS_CONNECT_RESPONSE, &length);

 ber_parse_header(s, BER_TAG_RESULT, &length);
 in_uint8(s, result);
 if (result != 0)
 {
  error("MCS connect: %d\n", result);
  return False;
 }

 ber_parse_header(s, BER_TAG_INTEGER, &length);
 in_uint8s(s, length);

 mcs_parse_domain_params(s);

 ber_parse_header(s, BER_TAG_OCTET_STRING, &length);
 if (length > mcs_data->size)
 {
  error("MCS data length %d\n", length);
  length = mcs_data->size;
 }

 in_uint8a(s, mcs_data->data, length);
 mcs_data->p = mcs_data->data;
 mcs_data->end = mcs_data->data + length;

 return s_check_end(s);
}
